language/move-lang/tests/move_check/parser/expr_unary_negation.exp
error: 

   ┌── tests/move_check/parser/expr_unary_negation.move:5:32 ───
   │
 5 │     Transaction::assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
   │                                ^ Invalid argument to '-'
   ·
 5 │     Transaction::assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
   │                                - Found: 'u64'. But the operation is not yet supported on any type
   │

error: 

   ┌── tests/move_check/parser/expr_unary_negation.move:5:46 ───
   │
 5 │     Transaction::assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
   │                                              ^^^^^^^ Invalid argument to '-'
   ·
 5 │     Transaction::assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
   │                                               - Found: 'u64'. But the operation is not yet supported on any type
   │

